# python-playground

./: .gitignore  .pre-commit-config.yaml  README.md
alpaca/: t.py
aws/ec2/: acl_ls.py  all.csv  ebs_ls.py  ec2_ls.py  metadata.py
aws/ecr/: build.py  cci-builder.py  convert.py  deploy.py  get-policy-results.py  ls.py  no_policy.py  test.json
aws/iam/: acc.py  role_ls.py  t.py  username_ls.py
aws/rds/: t.py
aws/resourcetags/: t.py
aws/s3/: delete_versioned_obj.py  ls_tar_ball_s3.py  search.py  search_by_tag.py  t.py
aws/ses/: ses.py
aws/sg/: main.py  unusued_sg_report.py
aws/ssm/: SessionManagerRunShell.json  update_session.py
aws/waf/: requirements.txt  wafls.py
cdktf/: cdktf.json  help  main.py  requirements.txt
cli/: tf_cfg.py
cli/dependabot/: t.py
cli/fpr/: .gitignore  .pre-commit-config.yaml  README.md  setup.cfg  tox.ini
cli/fpr/fpr/: error_handler.py  main.py  output.py
cli/fpr/fpr/commands/: crawl.py
cli/tf_state_ls/: main.py
code_formatter/: backup.py  t.py  target.py
common/: color_env.py  error_handler.py  json_to_file.py  json_to_md.py  json_to_yaml.py
context_managers/: log_ctx.py
datetime/: expired.py
file_scrubber/: ls.py
google/: cal.py
interview/: a.py  b.py  c.py  linked_list.py  pool.py  t.py
jar_finder/: t.py
paramiko/: check.py  main.py
pre-commit/: t.py
wordle/: main.py  test_main.py  wordlist
